--- a/snarkyjs/config.json
+++ b/snarkyjs/config.json
@@ -6,6 +6,11 @@
       "keyPath": "keys/sudoku.json",
       "fee": "0.1",
       "smartContract": "Sudoku"
+    },
+    "berkeley": {
+      "url": "https://proxy.berkeley.minaexplorer.com/graphql",
+      "keyPath": "keys/berkeley.json",
+      "fee": "0.1"
     }
   }
 }
